# idocs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  test.yml
.idocs/: sources.json
.idocs/docs/: architecture.md  commands.md  development.md
src/: check.rs  cmds.rs  index.rs  main.rs  tui.rs
tests/: integration.rs
