[package]
name = "idocs"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
atty = "0.2"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
